--- a/templates/about.html
+++ b/templates/about.html
@@ -2,7 +2,12 @@
 {% block content %}
 <div class="about">
     <h1>My about page</h1>
-    <p>This is a test website again</p>
-    <p>This was added later</p>
+    <h2>This is a test website again</h2>
+    <h3>Resume</h3>
+
+    <object data="../static/documents/resume.pdf" type="application/pdf" width="100%" height="100%">
+        <p><b>Example fallback content</b>: This browser does not support PDFs. Please download the PDF to view it: <a href="/pdf/sample-3pp.pdf">Download PDF</a>.</p>
+    </object>
+
 </div>
 {% endblock %}
