--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9,7 +9,7 @@ h1{
   margin: 0;
   padding: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #000;    
+  color: #000;
 }
 /*
  * Formatting the header area
@@ -63,10 +63,11 @@ div.about {
 }
 
 h2 {
-  font-size: 3em;
   margin-top: 40px;
-  text-align: center;
+  text-align: left;
   letter-spacing: -2px;
+  font-weight: 500;
+  text-decoration: underline;
 }
 
 h3 {
@@ -75,7 +76,7 @@ h3 {
   margin-top: 30px;
   text-align: center;
   letter-spacing: -1px;
-  color: #FFF;
+  color: #000;
 }
 
 .menu {
