--- a/templates/about.html
+++ b/templates/about.html
@@ -2,10 +2,10 @@
 {% block content %}
 <div class="about">
     <h1>My about page</h1>
-    <h2>This is a test website again</h2>
+    <h2>My Documents</h2>
     <h3>Resume</h3>
 
-    <object data="../static/documents/resume.pdf" type="application/pdf" width="100%" height="100%">
+    <object data="../static/documents/resume.pdf" type="application/pdf" width="100%" height="700px">
         <p><b>Example fallback content</b>: This browser does not support PDFs. Please download the PDF to view it: <a href="/pdf/sample-3pp.pdf">Download PDF</a>.</p>
     </object>
 
