--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10,6 +10,7 @@ h1{
   padding: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #000;
+  margin-left: 8px;
 }
 /*
  * Formatting the header area
@@ -42,7 +43,7 @@ header h1.logo a:hover {
  */
 
 .container {
-  width: 1200px;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -68,6 +69,7 @@ h2 {
   letter-spacing: -2px;
   font-weight: 500;
   text-decoration: underline;
+  margin-left: 8px;
 }
 
 h3 {
@@ -82,6 +84,7 @@ h3 {
 .menu {
   float: right;
   margin-top: 8px;
+  margin-right: 8px;
 }
 
 
