--- a/templates/about.html
+++ b/templates/about.html
@@ -2,11 +2,11 @@
 {% block content %}
 <div class="about">
     <h1>My about page</h1>
-    <h2>My Documents</h2>
+    <h2>My Documents:</h2>
     <h3>Resume</h3>
 
     <object data="../static/documents/resume.pdf" type="application/pdf" width="100%" height="700px">
-        <p><b>Example fallback content</b>: This browser does not support PDFs. Please download the PDF to view it: <a href="/pdf/sample-3pp.pdf">Download PDF</a>.</p>
+        <p><b>Example fallback content</b>: This browser does not support PDFs. Please download the PDF to view it: <a href="../static/documents/resume.pdf">Download PDF</a>.</p>
     </object>
 
 </div>
