Changing content and adding pdf display

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Photon by HTML5 UP</title>
+		<title>Julian Peters's Website</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/static/assets/css/main.css" />
@@ -18,10 +18,8 @@
 			<section id="header">
 				<div class="inner">
 					<span class="icon solid major fa-cloud"></span>
-					<h1>Hi, I'm <strong>Photon</strong>, another fine<br />
-					little freebie from <a href="http://html5up.net">HTML5 UP</a>.</h1>
-					<p>Accumsan feugiat mi commodo erat lorem ipsum, sed magna<br />
-					lobortis feugiat sapien sed etiam volutpat accumsan.</p>
+					<h1>Hi, I'm <strong>Julian Peters</strong></h1>
+					<p>I'm a Computer Engineer at Wentworth Institute of Technology</p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">Discover</a></li>
 					</ul>
@@ -34,13 +32,12 @@
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
 							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
+								<h2>About Me</h2>
 							</header>
-							<p>Adipiscing a commodo ante nunc accumsan et interdum mi ante adipiscing. A nunc lobortis non nisl amet vis sed volutpat aclacus nascetur ac non. Lorem curae et ante amet sapien sed tempus adipiscing id accumsan.</p>
+							<p>I currently am living in the greater Boston area but after I graduate in August of 2020 I plan to relocate to Eastern New Hampshire</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="/static/images/pic01.jpg" alt="" /></span>
+							<span class="image fit"><img src="/static/images/header.png" alt="" /></span>
 						</div>
 					</div>
 				</div>
@@ -77,32 +74,22 @@
 			<section id="three" class="main style1 special">
 				<div class="container">
 					<header class="major">
-						<h2>Adipiscing amet consequat</h2>
+						<h2>Professional Documents</h2>
 					</header>
-					<p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p>
+					<p>This is a list of documents that will give you a better idea of the skills and experience I have gathered from academic and professional work.</p>
 					<div class="row gtr-150">
-						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="/static/images/pic02.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+						<div class="col-6 col-12-medium">
+							<span class="image fit"><img src="/static/images/Resume_Hardware.jpg" alt="" /></span>
+							<h3>Resume</h3>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="\Resume" class="button">See Full</a></li>
 							</ul>
 						</div>
-						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="/static/images/pic03.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+						<div class="col-6 col-12-medium">
+							<span class="image fit"><img src="/static/images/Project_Portfolio_Hardware.jpg" alt="" /></span>
+							<h3>Projects Portfolio</h3>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
-							</ul>
-						</div>
-						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="/static/images/pic04.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
-							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="\Portfolio" class="button">See Full</a></li>
 							</ul>
 						</div>
 					</div>
